--- a/config/theme/css/user-settings.css
+++ b/config/theme/css/user-settings.css
@@ -2,16 +2,17 @@
 * @Author: JB Stoker
 * @Date:   2016-02-11
 * @Last Modified by:   JB Stoker
-* @Last Modified time: 2016-04-21 09:30:18
+* @Last Modified time: 2016-04-21 17:25:59
 */
 /* Language selection and Flags */
 #setlang li{
 	display:block;
 	padding:5px;
+  opacity: 0.4;
 }
 
 #setlang li.active{
-	border: 1px solid #384b5f;
+  opacity: 1;
 }
 
 .flag-icon-background {
