Changes folder structure Removed bootstrap switch added css switch with checkbox

--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -14,15 +14,14 @@
 @import (less) "./../../bower_components/summernote/dist/summernote-bs3.css";
 
 /* Toggle css */
-@import "toggle.less";
-@import (less) "side-toggle.css";
+@import "./../../config/theme/css/toggle.less";
+@import (less) "./../../config/theme/css/side-toggle.css";
 
 /* Loader File */
-@import "loader.less";
+@import "./../../config/theme/css/loader.less";
 
 /* Internal dev theme css file */
 @import (less) "./../../config/theme/css/datatables-theme.css";
-@import (less) "datatables.css";
 @import (less) "./../../config/theme/css/summernote-theme.css";
 @import (less) "./../../config/theme/css/fonts-theme.css";
 @import (less) "./../../config/theme/css/yeti.css";
@@ -34,3 +33,4 @@
 @import (less) "./../../config/theme/css/user-profile.css";
 @import (less) "./../../config/theme/css/user-management.css";
 @import (less) "./../../config/theme/css/user-settings.css";
+@import (less) "./../../config/theme/css/checkbox-switch.css";
