--- a/views/error.hbs
+++ b/views/error.hbs
@@ -32,7 +32,7 @@
 </head>
 <body class="preload">
     <header class="cd-main-header">
-        <a href="/" class="cd-logo"><img src="/images/logo.png" id="logoImg" alt="Logo"><span class="title">{{{__ 'Plexus'}}}</span></a>
+        <a href="/" class="cd-logo"><img src="/images/logo.svg" id="logoImg" alt="Logo"><span class="title">{{{__ 'Plexus'}}}</span></a>
     </header> <!-- .cd-main-header -->
         <main class="main-content">
         <div class="content-wrapper">
