--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -6,9 +6,6 @@
 @import (less) "./../../bower_components/font-awesome/css/font-awesome.css";
 @import (less) "./../../bower_components/datatables/media/css/dataTables.bootstrap.css";
 
-/* Bootstrap-toggle.js css files */
-@import (less) "./../../bower_components/bootstrap-toggle/css/bootstrap-toggle.css";
-
 /* Summernote.js css files */
 @import (less) "./../../bower_components/summernote/dist/summernote.css";
 @import (less) "./../../bower_components/summernote/dist/summernote-bs3.css";
@@ -27,6 +24,7 @@
 @import (less) "./../../config/theme/css/yeti.css";
 @import (less) "./../../config/theme/css/theme.css";
 @import (less) "./../../config/theme/css/error.css";
+@import (less) "./../../config/theme/css/alert.css";
 @import (less) "./../../config/theme/css/cd-tabs.css";
 @import (less) "./../../config/theme/css/lock.css";
 @import (less) "./../../config/theme/css/login.css";
