--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -18,101 +18,60 @@
       </div>
       <div class="col-md-8">
         <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12"  id="profile-info">
-          <h3>{{{__ 'Personal info'}}}</h3>
+          <h3 id="info-title" data-title="{{user.title}}" data-surname="{{user.surname}}" data-middlename="{{user.middlename}}" data-lastname="{{user.lastname}}" data-maidenname="{{user.maidenname}}">{{user.title}} {{user.surname}} {{user.middlename}} {{user.lastname}} - {{user.maidenname}}</h3>
           <div class="info-text">{{{user.info.personal_text}}}</div>
         </div>
 {{!-- Full Name --}}
 <div class="row" id="titlerow"></div>
-<div class="row" id="namerow">
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <span name="title">{{user.title}}</span>
-    <span name="surname">{{user.surname}}</span>
-    <span name="middlename">{{user.middlename}}</span>
-    <span name="lastname">{{user.lastname}}</span>
-    <span name="maidenname">{{user.maidenname}}</span>
-  </div> 
-</div>
+<div class="row" id="namerow"></div>
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
   <hr></hr>
 </div>
 <div class="row">
   <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="birthday">Birthday</span>
-        <input type="date" class="form-control" placeholder="Birthday" aria-describedby="birthday" name="birthday" value="{{birthday}}">
+      <div class="input-group input-group-sm" id="birthday-group" data-old="{{user.birthday}}">
+          <h4><svg class="icon-cake-2"><use xlink:href="/fonts/icons.svg#icon-cake-2"></use></svg> <span id="birthday-span">{{birthday}}</span></h4> 
       </div>
     </div>
     <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6" id="genderrow" data-text"{{user.gender}}">
-
-
-        <svg class="icon-gender-female"><use xlink:href="/fonts/icons.svg#icon-gender-female"></use></svg>
-        <svg class="icon-gender-male"><use xlink:href="/fonts/icons.svg#icon-gender-male"></use></svg>
-        <svg class="icon-genders"><use xlink:href="/fonts/icons.svg#icon-genders"></use></svg>
-
-
   </div>
 </div>
 <div class="row">
 {{!-- Contact info --}}
     <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="phone">Phone</span>
-        <input type="tel" class="form-control" placeholder="+31 515552255" aria-describedby="phone" name="phone" value="{{user.phone}}">
+      <div class="input-group input-group-sm" id="phone-group" data-old="{{user.phone}}">
+          <h4 style="white-space:pre;"><svg class="icon-phone-3"><use xlink:href="/fonts/icons.svg#icon-phone-3"></use></svg> <span id="phone-span">{{user.phone}}</span></h4> 
       </div>
     </div>
     <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="mobile">Mobile</span>
-        <input type="tel" class="form-control" placeholder="+31 615552255" aria-describedby="mobile" name="mobile" value="{{user.mobile}}">
+      <div class="input-group input-group-sm" id="mobile-group" data-old="{{user.mobile}}">
+          <h4 style="white-space:pre;" style="white-space:pre;"><svg class="icon-mobile-phone-1"><use xlink:href="/fonts/icons.svg#icon-mobile-phone-1"></use></svg> <span id="mobile-span">{{user.mobile}}</span></h4> 
       </div>
     </div>
-    <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="email">Email</span>
-        <input type="email" class="form-control" placeholder="Email" aria-describedby="email" name="email" value="{{user.email}}">
+    <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-6">
+      <div class="input-group input-group-sm" id="email-group" data-old="{{user.email}}">
+          <h4 style="white-space:pre;"><svg class="icon-mail-2"><use xlink:href="/fonts/icons.svg#icon-mail-2"></use></svg> <span id="email-span">{{user.email}}</span></h4> 
       </div>
     </div>
-    <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="website">Website</span>
-        <input type="url" class="form-control" placeholder="http://www.website.com" aria-describedby="website" name="website" value="{{user.website}}">
+    <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-6">
+      <div class="input-group input-group-sm" id="website-group" data-old="{{user.website}}">
+          <h4 style="white-space:pre;"><svg class="icon-globe-2"><use xlink:href="/fonts/icons.svg#icon-globe-2"></use></svg> <span id="website-span">{{user.website}}</span></h4> 
       </div>
     </div>
 </div>
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="address-hr" style="display:none;">
   <hr></hr>
 </div>
 <div class="row">
 {{!-- Address --}}
-    <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="address">Address</span>
-        <input type="text" class="form-control" style="width:150%" placeholder="Address" aria-describedby="address" name="address" value="{{user.address.street}}">
-        <span class="input-group-btn" style="width:0px;"></span>
-        <input type="text" class="form-control" style="width:50%; float:right" placeholder="Nr" aria-describedby="number" name="number" value="{{user.address.number}}">
-      </div>
+    <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12" id='address-row'>
+      <legend>Address</legend>
+          <h4 id="address-group"> <span id="street-span">{{user.address.street}}</span> <span id="number-span">{{user.address.number}}</span></h4> 
+          <h4 id="postalcode-group"> <span id="postalcode-span">{{user.address.postalcode}}</span></h4> 
+          <h4 id="city-group"> <span id="city-span">{{user.address.city}}</span></h4> 
+          <h4 id="country-group"> <span id="country-span">{{user.address.country}}</span></h4> 
     </div>
-    <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="postalcode">Postalcode</span>
-        <input type="text" class="form-control" placeholder="Postalcode" aria-describedby="postalcode" name="postalcode" value="{{user.address.postalcode}}">
-      </div>
     </div>
-    <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="city">City</span>
-        <input type="text" class="form-control" placeholder="City" aria-describedby="city" name="city" value="{{user.address.city}}">
-      </div>
-    </div>
-    <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      <div class="input-group input-group-sm">
-        <span class="input-group-addon profile" style="min-width:100px;" id="country">Country</span>
-        <input type="text" class="form-control" placeholder="Country" aria-describedby="country" name="country" value="{{user.address.country}}">
-      </div>
-    </div>
-
-</div>
-
       </div>
       </form>
 </div>
