--- a/views/layouts/partials/alerts.hbs
+++ b/views/layouts/partials/alerts.hbs
@@ -1,22 +1,32 @@
 {{#if success.length}}
-	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-success alert-container" role="alert">
-		<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
-		<span data-notify="icon"></span>
-		<span data-notify="title"><strong>{{success.[0].title}}</strong></span>
-		<span data-notify="message">{{success.[0].msg}}</span> 
-		
-		{{#if success.[0].bar}}
-		<div class="progress" data-notify="progressbar">
-			<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
-		</div>
-		{{/if}}
+	{{#if succes.[0].msg}}
+		<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-success alert-container" role="alert">
+			<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
+			<span data-notify="icon"></span>
+			<span data-notify="title"><strong>{{success.[0].title}}</strong></span>
+			<span data-notify="message">{{success.[0].msg}}</span> 
+			
+			{{#if success.[0].bar}}
+			<div class="progress" data-notify="progressbar">
+				<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+			</div>
+			{{/if}}
 
-		{{#if success.[0].url.length}}
-		<a href="{{success.[0].url}}" target="{{success.[0].target}}" data-notify="url"></a>
-		{{/if}}
-	</div>
+			{{#if success.[0].url.length}}
+			<a href="{{success.[0].url}}" target="{{success.[0].target}}" data-notify="url"></a>
+			{{/if}}
+		</div>
+	{{else}}
+	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-success alert-container" role="alert">
+			<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
+			<span data-notify="icon"></span>
+			<span data-notify="title"><strong>Success!</strong></span>
+			<span data-notify="message">{{success}}</span> 
+		</div>
+	{{/if}}
 {{/if}}
 {{#if error.length}}
+	{{#if error.[0].msg}}
 	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-danger alert-container" role="alert">
 		<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
 		<span data-notify="icon"></span>
@@ -33,8 +43,18 @@
 		<a href="{{error.[0].url}}" target="{{error.[0].target}}" data-notify="url"></a>
 		{{/if}}
 	</div>
+	{{else}}
+	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-danger alert-container" role="alert">
+		<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
+		<span data-notify="icon"></span>
+		<span data-notify="title"><strong>Error!</strong></span>
+		<span data-notify="message">{{error}}</span>
+	</div>
+	{{/if}}
 {{/if}}
+
 {{#if warning.length}}
+	{{#if warning.[0].msg}}
 	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-warning alert-container" role="alert">
 		<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
 		<span data-notify="icon"></span>
@@ -51,8 +71,17 @@
 		<a href="{{warning.[0].url}}" target="{{warning.[0].target}}" data-notify="url"></a>
 		{{/if}}
 	</div>
+	{{else}}
+	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-warning alert-container" role="alert">
+		<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
+		<span data-notify="icon"></span>
+		<span data-notify="title"><strong>Warning!</strong></span>
+		<span data-notify="message">{{warning}}</span> 
+	</div>	
+	{{/if}}
 {{/if}}
 {{#if info.length}}
+	{{#if info.[0].msg}}
 	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-info alert-container" role="alert">
 		<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
 		<span data-notify="icon"></span>
@@ -69,4 +98,12 @@
 		<a href="{{info.[0].url}}" target="{{info.[0].target}}" data-notify="url"></a>
 		{{/if}}
 	</div>
+	{{else}}
+	<div data-notify="container" class="col-xs-11 col-sm-3 alert fade-in alert-info alert-container" role="alert">
+		<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
+		<span data-notify="icon"></span>
+		<span data-notify="title"><strong>Info!</strong></span>
+		<span data-notify="message">{{info}}</span> 
+	</div>
+	{{/if}}
 {{/if}}
