--- a/views/user/settings.hbs
+++ b/views/user/settings.hbs
@@ -5,7 +5,6 @@
             <li><a data-content="password" href="#0"><svg class="icon-key-1"><use xlink:href="/fonts/icons.svg#icon-key-1"></use></svg><span class="cd-tab-text">{{{__ 'Access'}}}<span/></a></li>
         </ul> <!-- cd-tabs-navigation -->
     </nav>
-
     <ul class="cd-tabs-content">
         <li data-content="global" class="selected">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -22,29 +21,17 @@
             </div>
         </li>
         <li data-content="password">
-        <div class="row">    
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="PassWordBox">
-            <div class="col-md-12">
-                    <legend>{{{__ 'Change password'}}}</legend>
-            </div>        
+        <div id="AccessBox" class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
+        <div class="row">
+            <br/>
+        </div>            
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" id="PassWordBox">
+            <div class="well">
+                    <legend>{{{__ 'Change password'}}}</legend>        
             <div class="form-group">
                 <div id="passwordForm">
-                    <div class="col-sm-12 col-md-3 col-lg-4">
-                        <span id="password_8char" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ '8 Characters Long'}}}<br>
-                        <span id="password_ucase" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'One Uppercase Letter'}}}<br>
-                        <span id="password_lcase" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'One Lowercase Letter'}}}<br>
-                        <span id="password_num" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'One Number'}}}<br>
-                        <span id="password_pwmatch" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'Passwords Match'}}}<br>
-                    <br>
-                    </div>
-                    <div class="col-sm-12 col-md-9 col-lg-8">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <label for="password_old" class="control-label col-md-2">{{{__ 'Old Password'}}}</label>
-                            <div class="col-md-10">
-                                <input type="password" class="form-control" name="password_old" id="password_old" placeholder="{{{__ 'Old Password'}}}" autocomplete="off"><br>
-                            </div>
-                        </div>
+                    <div class="row">
+                    <form class="form-horizontal" method="post" action="/user/change-password">
                         <div class="form-group">
                             <label for="password1" class="control-label col-md-2">{{{__ 'New Password'}}}</label>
                                 <div class="col-md-10">
@@ -57,6 +44,26 @@
                                 <input type="password" class="form-control" name="password2" id="password2" placeholder="{{{__ 'Repeat Password'}}}" autocomplete="off"><br>
                             </div>
                         </div>
+                    <div class="row">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <span id="password_8char" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ '8 Characters Long'}}}<br>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <span id="password_ucase" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'One Uppercase Letter'}}}<br>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <span id="password_lcase" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'One Lowercase Letter'}}}<br>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <span id="password_num" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'One Number'}}}<br>
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                        <span id="password_pwmatch" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'Passwords Match'}}}<br>
+                    </div>
+                    </div>
+                    <div class="row">
+                        <hr></hr>
+                    </div>     
                         <div class="row">
                             <input type="submit" class="pull-right btn btn-primary btn-load" data-loading-text="{{{__ 'Changing Password...'}}}" value="{{{__ 'Change Password'}}}">
                         </div>
@@ -64,53 +71,48 @@
                     </div>
                 </div>
             </div>
-
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="PinCodeBox">
-            <div class="col-md-12">
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" id="PinCodeBox">
+            <div class="well">
                     <legend>{{{__ 'Change Pincode'}}}</legend>
-            </div>        
             <div class="form-group">
                 <div id="pincodeForm">
-                <div class="col-sm-12 col-md-3 col-lg-4"><span id="pincode_match" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'Pincodes Match'}}}<br></div>
-                    <div class="col-sm-12 col-md-9 col-lg-8">
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" method="post" action="/user/change-pincode">
                         <div class="form-group">
-                            <label for="old_pincode" class="control-label col-md-2">{{{__ 'Old Pincode'}}}</label>
+                            <label for="pincode" class="control-label col-md-2">{{{__ 'New Pincode'}}}</label>
                             <div class="col-md-10">
-                                <input type="password" class="form-control" name="old_pincode" maxlength="4" size="6" pattern="[0-9]*" id="old_pincode" placeholder="{{{__ 'Old Pincode'}}}" autocomplete="off"><br>
+                                <input type="password" class="form-control" name="pincode" maxlength="6" pattern="[0-9]*" id="pincode" placeholder="{{{__ 'New Pincode'}}}" autocomplete="off"><br>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="new_pincode" class="control-label col-md-2">{{{__ 'New Pincode'}}}</label>
+                            <label for="repeat_pincode" class="control-label col-md-2">{{{__ 'Repeat Pincode'}}}</label>
                             <div class="col-md-10">
-                                <input type="password" class="form-control" name="new_pincode" maxlength="4" pattern="[0-9]*" id="new_pincode" placeholder="{{{__ 'New Pincode'}}}" autocomplete="off"><br>
+                                <input type="password" class="form-control" name="repeat_pincode" maxlength="6" pattern="[0-9]*" id="repeat_pincode" placeholder="{{{__ 'New Pincode'}}}" autocomplete="off"><br>
                             </div>
                         </div>
-                        <div  class="row">
+                <div class="row">
+                    <div class="col-xs-12 col-sm12 col-md-12 col-lg-12">
+                        <span id="pincode_match" class="glyphicon glyphicon-remove" style="color:#FF0004;"></span> {{{__ 'Pincodes Match'}}}
+                    </div>
+                </div>    
+                <div class="row">
+                        <hr></hr>
                             <input type="submit" class="pull-right btn btn-primary btn-load" data-loading-text="{{{__ 'Changing Pincode...'}}}" value="{{{__ 'Change Pincode'}}}">
+                </div>     
+                        <div  class="row">
                         </div>
                     </form>
-                    </div>
                 </div>
             </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="LoginNameBox">
-            <div class="col-md-12">
-                    <legend>{{{__ 'Change login name'}}}</legend>
-            </div>        
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" id="LoginNameBox">
+            <div class="well">
+                    <legend>{{{__ 'Change login name'}}}</legend>        
             <div class="form-group">
                 <div id="nameForm">
-                    <div class="col-sm-12 col-md-12 col-lg-12">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <label for="name_old" class="control-label col-md-2">{{{__ 'Old Name'}}}</label>
-                            <div class="col-md-10">
-                                <input type="text" class="form-control" name="name_old" id="name_old" placeholder="{{{__ 'Old Name'}}}" autocomplete="off"><br>
-                            </div>
-                        </div>
+                    <form class="form-horizontal" method="post" action="/user/change-login">
                         <div class="form-group">
                             <label for="newname" class="control-label col-md-2">{{{__ 'New Name'}}}</label>
                             <div class="col-md-10">
@@ -118,28 +120,28 @@
                             </div>
                         </div>
                         <div  class="row">
+                        <hr></hr>
                             <input type="submit" class="pull-right btn btn-primary btn-load" data-loading-text="{{{__ 'Changing Login Name...'}}}" value="{{{__ 'Change Login Name'}}}">
                         </div>
                     </form>
-                    </div>
                 </div>
             </div>
             </div>
+            </div>
+        <div class="row">
+            <br/>
+            <br/>
+        </div> 
         </div>
         </li>
     </ul> <!-- cd-tabs-content -->
 </div> <!-- cd-tabs -->
-
-
-<div class="container" id="PassWordBoxForm" style="display:none;">
+<div class="container" id="AccesBoxModal" style="display:none;">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Login to change!</h3>
-                </div>
                 <div class="panel-body">
-                    <form role="form">
+                    <form role="form" id="AccessBoxForm">
                         <fieldset>
                             <div class="form-group">
                                 <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
@@ -148,61 +150,7 @@
                                 <input class="form-control" placeholder="Password" name="password" type="password" value="">
                             </div>
                             <!-- Change this to a button or input when using this as a form -->
-                            <button type="button" id="PassWordLogin" class="btn btn-success btn-block">Login</button>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="container" id="PinCodeBoxForm" style="display:none;">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Login to change!</h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                            </div>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <button type="button" id="PinCodeLogin" class="btn btn-success btn-block">Login</button>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="container" id="LoginNameBoxForm" style="display:none;">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Login to change!</h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                            </div>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <button type="button" id="LoginNameLogin" class="btn btn-success btn-block">Login</button>
+                            <button type="button" id="LoginBtn" class="btn btn-sm btn-primary btn-block">Login</button>
                         </fieldset>
                     </form>
                 </div>
